syntax = "proto3";

package io.anemos;

import "io/anemos/rewrite.proto";
import "io/anemos/meta.proto";
import "google/protobuf/descriptor.proto";

option java_outer_classname = "OptionsProto";


extend google.protobuf.MessageOptions {
    MessageRewriteRule message_rewrite = 66666666;
    MessageMeta message_meta = 66666667;
}

extend google.protobuf.FieldOptions {
    FieldRewriteRule field_rewrite = 66666666;
    FieldMeta field_meta = 66666667;
}
